--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font: normal 18px/1.5 "Fira Sans", "Helvetica Neue", sans-serif;
+  font: normal 18px/1.5 'Lora', serif;
   background: white;
   background-color: #f8f9fb;
   color: #4e5056;
