--- a/src/components/form/index.css
+++ b/src/components/form/index.css
@@ -90,10 +90,18 @@ p {
   cursor: not-allowed;
 }
 
-.error {
+.error-input-controls {
   border-color: red;
   border-style: ridge;
   border-width: 1px;
+}
+
+.error {
+  color: red;
+}
+
+.success {
+  color: green;
 }
 
 .mandatory-message {
